--- a/cahee/package.json
+++ b/cahee/package.json
@@ -10,13 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.24",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.0.0",
-    "gulp-imagemin": "^4.1.0",
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-imagemin": "^5.0.0",
     "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0"
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2"
   }
 }
